# hmpps-sharepoint-discovery

./: .gitignore  Dockerfile  README.md  globals.py  job.sh  main.py  pyproject.toml  requirements.txt  san.py  sharepoint_discovery.py
.github/: dependabot.yml
.github/workflows/: backup_repository.yml  pipeline.yml  security_codeql_actions_scan.yml  security_codeql_python_scan.yml  security_snyk_scan.yml  security_trivy.yml  security_veracode_pipeline_scan.yml  security_veracode_policy_scan.yml
.husky/: pre-commit
classes/: health.py  service_catalogue.py  sharepoint.py  slack.py
helm_deploy/: values-dev.yaml  values-prod.yaml
helm_deploy/hmpps-sharepoint-discovery/: Chart.yaml  values.yaml
helm_deploy/hmpps-sharepoint-discovery/templates/: discovery-cron-job.yaml
processes/: oldproducts.py  product_sets.py  products.py  scheduled_jobs.py  service_areas.py  teams.py  update_sc_scheduled_jobs.py
utilities/: job_log_handling.py
utils/: update_sc_scheduled_jobs.py
