[project]
name = "hmpps-sharepoint-discovery"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity==1.25.3",
    "dockerfile-parse==2.0.1",
    "hmpps-sre-python-lib",
]

[tool.uv.sources]
hmpps-sre-python-lib = { url = "https://github.com/ministryofjustice/hmpps-sre-python-lib/releases/download/v1.2.8/hmpps_sre_python_lib-1.2.8-py3-none-any.whl" }
